JastAddExtensions/Refactoring/tests/eclipse/IntroduceParameter/invalid/NotInMethod1.java
//selection: 5, 19, 5, 24
package invalid;

class NotInMethod1 {
	public int fSum= 1 + 2;
}
